# uavcrew-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  manifest.json.example  pyproject.toml  requirements.txt
docs/: DATA_FORMATS.md
keys/: k3_public.pem
scripts/: test_connection.py
src/mcp_server/: __init__.py  api_client.py  cli.py  data_adapter.py  http_server.py  server.py
src/mcp_server/database/: __init__.py  models.py  seed.py
src/mcp_server/tools/: __init__.py  aircraft.py  database.py  file_metadata.py  flight_log.py  list_files.py  maintenance.py  mission.py  pilot.py  read_file.py
tests/: test_api_client.py  test_server_middleware.py
